package com.eventsystem.domain.company;

public enum CompanyStatus {
    ACTIVE,
    SUSPENDED,
    TERMINATED
}
