package com.eventsystem.domain.company;

import com.eventsystem.domain.member.MemberId;

import java.util.List;
import java.util.Objects;
import java.util.Set;

public final class ProductionCompany {
    private final CompanyId companyId;
    private final MemberId founderId;
    private CompanyDetails companyDetails;
    private CompanyStatus status;
    private final AppointmentTree appointmentTree;

    private ProductionCompany(CompanyId companyId, MemberId founderId, CompanyDetails companyDetails) {
        this.companyId = Objects.requireNonNull(companyId, "companyId must not be null");
        this.founderId = Objects.requireNonNull(founderId, "founderId must not be null");
        this.companyDetails = Objects.requireNonNull(companyDetails, "companyDetails must not be null");
        this.status = CompanyStatus.ACTIVE;
        this.appointmentTree = new AppointmentTree(founderId);
    }

    public static ProductionCompany create(MemberId founderId, String name, String description, double rating) {
        return new ProductionCompany(CompanyId.random(), founderId, new CompanyDetails(name, description, rating));
    }

    public synchronized void appointOwner(MemberId appointerId, MemberId targetId) {
        requireActive();
        appointmentTree.appointOwner(appointerId, targetId);
    }

    public synchronized void removeOwner(MemberId removerId, MemberId targetId) {
        requireActive();
        appointmentTree.removeOwner(removerId, targetId);
    }

    public synchronized void relinquishOwnership(MemberId memberId) {
        requireActive();
        if (founderId.equals(memberId)) {
            throw new CompanyDomainException("founder cannot relinquish ownership");
        }
        appointmentTree.removeOwner(memberId, memberId);
    }

    public synchronized void appointManager(MemberId ownerId, MemberId targetId, Set<Permission> permissions) {
        requireActive();
        appointmentTree.appointManager(ownerId, targetId, permissions);
    }

    public synchronized void removeManager(MemberId ownerId, MemberId managerId) {
        requireActive();
        appointmentTree.removeManager(ownerId, managerId);
    }

    public synchronized void modifyManagerPermissions(MemberId ownerId, MemberId managerId, Set<Permission> permissions) {
        requireActive();
        appointmentTree.modifyManagerPermissions(ownerId, managerId, permissions);
    }

    public synchronized void suspend() {
        if (status == CompanyStatus.TERMINATED) {
            throw new CompanyDomainException("terminated company cannot be suspended");
        }
        status = CompanyStatus.SUSPENDED;
    }

    public synchronized void terminate() {
        status = CompanyStatus.TERMINATED;
    }

    public synchronized void reopen() {
        if (status == CompanyStatus.TERMINATED) {
            throw new CompanyDomainException("terminated company cannot be reopened");
        }
        status = CompanyStatus.ACTIVE;
    }

    public synchronized boolean isOwner(MemberId memberId) {
        return appointmentTree.findOwner(memberId).isPresent();
    }

    public synchronized boolean isManager(MemberId memberId) {
        return appointmentTree.findManager(memberId).isPresent();
    }

    public synchronized boolean hasPermission(MemberId memberId, Permission permission) {
        Objects.requireNonNull(permission, "permission must not be null");
        if (status != CompanyStatus.ACTIVE) {
            return false;
        }
        if (isOwner(memberId)) {
            return true;
        }
        return appointmentTree.findManager(memberId)
                .map(managerNode -> managerNode.hasPermission(permission))
                .orElse(false);
    }

    public synchronized List<MemberId> getAppointmentSubTree(MemberId ownerId) {
        return appointmentTree.getAppointmentSubTree(ownerId);
    }

    public CompanyId companyId() {
        return companyId;
    }

    public CompanyDetails companyDetails() {
        return companyDetails;
    }

    public CompanyStatus status() {
        return status;
    }

    public MemberId founderId() {
        return founderId;
    }

    private void requireActive() {
        if (status != CompanyStatus.ACTIVE) {
            throw new CompanyDomainException("company is not active");
        }
    }
}
